decoding algorithms  updated

--- a/Decoding Algorithms/decoding_algorithms.ipynb
+++ b/Decoding Algorithms/decoding_algorithms.ipynb
@@ -222,8 +222,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Greedy Decoder selects the word with the highest probability at each step of the sequence generation. \n",
-    "\n",
+    "The Greedy Decoder selects the word with the highest probability at each step of the sequence generation. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Greedy Decoder: Mathematical Foundation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Mathematically, it can be expressed as:\n",
     "\n",
     "$$\n",
@@ -355,8 +367,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Beam Search keeps track of multiple hypotheses (sequences) at each step. The score of a sequence is the sum of the log probabilities of the words in the sequence, normalized by the sequence length to penalize longer sequences. It's a heuristic search algorithm that expands upon the idea of greedy decoding by exploring a wider set of possible sequences at each step and selecting the best ones to continue expanding.\n",
-    "\n",
+    "Beam Search keeps track of multiple hypotheses (sequences) at each step. The score of a sequence is the sum of the log probabilities of the words in the sequence, normalized by the sequence length to penalize longer sequences. It's a heuristic search algorithm that expands upon the idea of greedy decoding by exploring a wider set of possible sequences at each step and selecting the best ones to continue expanding."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Beam Search Decoder: Mathematical Foundation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The goal of beam search is to find a sequence $Y = (y_1, y_2, \\ldots, y_{|Y|})$ that maximizes the score $Score(Y)$, given the input $X$. The score of a sequence is determined by the sum of the log probabilities of the words in the sequence, normalized by the sequence length raised to the power of a normalization parameter $\\alpha$. This can be mathematically represented as:\n",
     "\n",
     "$$\n",
@@ -508,6 +532,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Pure Sampling: Mathematical Foundation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Pure sampling can be represented as choosing the next word $y_t$ at each timestep $t$ based on the probability distribution:\n",
     "\n",
     "$$\n",
@@ -649,9 +680,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Mathematical Foundation:** Top-K Sampling narrows the sampling pool to the top \\(K\\) most probable words at each step. This balances the trade-off between randomness and determinism, allowing for diverse but plausible sequence generation.\n",
-    "\\[P'(y) = \\frac{P(y | y_{1:t-1}, X) \\cdot \\mathbb{1}_{y \\in K}}{\\sum_{y' \\in K} P(y' | y_{1:t-1}, X)}\\]\n",
-    "where \\(P'\\) is the modified probability distribution"
+    "Top-K Sampling is a decoding strategy that introduces randomness into the text generation process, allowing for more diverse and creative outputs. Unlike greedy decoding, which always picks the word with the highest probability, Top-K sampling narrows the choice to the top \\(K\\) most likely next words and randomly selects from this subset based on their probability distribution. This method helps prevent the model from getting stuck in repetitive loops and generates more varied sentences."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Top-K Sampling: Mathematical Foundation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Top-K Sampling modifies the probability distribution of the next word by zeroing out the probabilities of all but the top $K$ candidates before sampling. Mathematically, given a probability distribution: \n",
+    "\n",
+    "$$\n",
+    "P(y_t | y_{1:t-1}, X)\n",
+    "$$\n",
+    "\n",
+    "over the vocabulary for the next word $y_t$ given the input $X$ and previous words $y_{1:t-1}$. \n",
+    "\n",
+    "Top-K sampling involves:\n",
+    "\n",
+    "1. Sorting $P$ and retaining the top $K$ words' probabilities, setting others to zero.\n",
+    "2. Renormalizing the modified distribution so that the sum of probabilities equals 1.\n",
+    "3. Sampling the next word $y_t$ from this renormalized distribution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Top-K Sampling: A Conceptual Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imagine using Top-K Sampling with \\(K=3\\) to generate text:\n",
+    "\n",
+    "1. **Initialization**: Begin with the start token `<s>` as the initial sequence.\n",
+    "\n",
+    "2. **Step 1**: For the initial word `<s>`, generate the probability distribution over all possible next words. Suppose the top 3 words according to their probabilities are \"I\", \"The\", and \"Birds\".\n",
+    "\n",
+    "3. **Sampling**: Instead of choosing the highest probability word, randomly select one of the top 3 words, say \"I\", based on their probabilities. The sequence now is `<s> I`.\n",
+    "\n",
+    "4. **Continue**: Repeat this process, at each step generating probabilities for the next word, narrowing down to the top 3, and sampling from them. This leads to more varied and potentially less predictable text generation than greedy decoding.\n",
+    "\n",
+    "5. **Termination**: This process ends when an end token `</s>` is generated or a maximum sequence length is reached, producing a final sequence like `<s> I am flying </s>`.\n",
+    "\n",
+    "6. **Diversity Introduced**: By sampling from the top \\(K\\) candidates at each step, Top-K Sampling introduces randomness into the sequence generation, leading to diverse outputs on different runs, even with the same start conditions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Top-K Sampling: Simple Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated sequence with Top K sampling decoding: <s> fish swim in the sea </s>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def top_k_sampling_decoder(model, k=3):\n",
+    "    \"\"\"\n",
+    "    Generate a sequence of words using a Top-K sampling decoding strategy.\n",
+    "\n",
+    "    Args:\n",
+    "    - model (nn.Module): The trained model for generating sequences.\n",
+    "    - k (int): The number of top probabilities to consider for sampling.\n",
+    "\n",
+    "    Returns:\n",
+    "    - List[str]: The generated sequence of words.\n",
+    "    \"\"\"\n",
+    "    model.eval()\n",
+    "    input_word = torch.tensor([start_token], dtype=torch.long)\n",
+    "    generated_sequence = [start_token]\n",
+    "    \n",
+    "    for _ in range(max_length - 1):\n",
+    "        with torch.no_grad():\n",
+    "            output_logits = model(input_word.unsqueeze(0))  # Ensure input is batched\n",
+    "            probabilities = F.softmax(output_logits, dim=-1).squeeze()  # Adjust for batch dimension\n",
+    "\n",
+    "            # Handling both single and batched cases\n",
+    "            if probabilities.dim() == 2:\n",
+    "                probabilities = probabilities[0]\n",
+    "\n",
+    "            top_probs, top_indices = torch.topk(probabilities, k, dim=-1)\n",
+    "            # Sample from the top k probabilities\n",
+    "            sampled_idx = torch.multinomial(top_probs, 1).item()\n",
+    "            next_word = top_indices[sampled_idx].item()  # Correct indexing\n",
+    "\n",
+    "            generated_sequence.append(next_word)\n",
+    "        \n",
+    "            if next_word == end_token:\n",
+    "                break\n",
+    "        \n",
+    "            input_word = torch.tensor([next_word], dtype=torch.long)\n",
+    "    \n",
+    "    # Convert indices back to words\n",
+    "    generated_words = [inv_vocab.get(idx, '<unk>') for idx in generated_sequence]\n",
+    "    return generated_words\n",
+    "\n",
+    "generated_sequence = top_k_sampling_decoder(model, k=3)\n",
+    "print(\"Generated sequence with Top K sampling decoding:\", ' '.join(generated_sequence))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insights from Top-K Sampling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output generated by the Top-K Sampling decoding strategy, \"`<s> fish swim in the sea </s>`\", provides several insights into how this approach can affect the text generation process. Here are the key takeaways regarding Top-K Sampling based on the generated output:\n",
+    "\n",
+    "1. **Increased Diversity and Creativity**: Unlike greedy decoding, which deterministically selects the most probable next word, Top-K sampling introduces randomness by selecting from the top \\(K\\) probable words. This can lead to more diverse and creative outputs, as seen in the concise and coherent sentence generated in the example.\n",
+    "\n",
+    "2. **Balance Between Randomness and Relevance**: By limiting the sampling pool to the top \\(K\\) words, the model ensures that the chosen words are still highly probable and relevant to the context. This strikes a balance between randomness (for diversity) and maintaining coherence in the generated text.\n",
+    "\n",
+    "3. **Customizable Diversity**: The choice of \\(K\\) plays a significant role in controlling the diversity of the generated text. A smaller \\(K\\) increases randomness (potentially leading to more creative but less predictable outputs), while a larger \\(K\\) reduces randomness and makes the output more deterministic and similar to greedy decoding. The value of \\(K=3\\) used here suggests a moderate level of diversity.\n",
+    "\n",
+    "4. **Potential for Unpredictable Outputs**: Given the stochastic nature of Top-K Sampling, running the decoder multiple times with the same initial conditions can lead to different sequences each time. This variability can be advantageous for applications requiring varied outputs but may require additional filtering or post-processing for tasks demanding high consistency.\n",
+    "\n",
+    "5. **Mitigation of Repetitive Patterns**: A common issue with simpler decoding strategies, like greedy decoding, is the tendency to produce repetitive or generic text. Top-K Sampling's introduction of randomness helps mitigate this issue by occasionally selecting less probable (but still relevant) words, leading to more nuanced and interesting text.\n",
+    "\n",
+    "6. **Effectiveness in Contextual Coherence**: The generated sentence demonstrates that Top-K Sampling can produce contextually coherent and grammatically correct sentences, indicating that even with the introduction of randomness, the model can leverage its understanding of language structure and context learned during training.\n",
+    "\n",
+    "7. **Dependency on Model Quality**: The coherence and relevance of the generated text heavily depend on the underlying model's quality and training. A well-trained model on a comprehensive dataset is more likely to leverage Top-K Sampling effectively to produce meaningful and contextually appropriate text."
    ]
   },
   {
