decoding algorithms  updated

--- a/Decoding Algorithms/decoding_algorithms.ipynb
+++ b/Decoding Algorithms/decoding_algorithms.ipynb
@@ -34,7 +34,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define a Small Corpus: We'll create a small corpus of sentences to simulate a simple natural language processing task."
+    "### Define a Small Corpus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll create a small corpus of sentences to simulate a simple natural language processing task."
    ]
   },
   {
@@ -58,7 +65,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Preprocess the Corpus: Tokenize the corpus into words, build a vocabulary, and prepare numerical representations for the words."
+    "### Preprocess the Corpus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tokenize the corpus into words, build a vocabulary, and prepare numerical representations for the words."
    ]
   },
   {
@@ -103,6 +117,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Architecture"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -136,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train the model"
+    "### Train the Model"
    ]
   },
   {
@@ -209,6 +230,13 @@
     "start_token = vocab['<s>'] # start_token (int): The index of the start token to begin generation.\n",
     "end_token = vocab['</s>'] # end_token (int): The index of the end token which stops generation.\n",
     "max_length = 10 # max_length (int): The maximum length of the sequence to generate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's continue with the different decoding generation algorithms."
    ]
   },
   {
@@ -839,64 +867,154 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Top-P (Nucleus) Sampling is a sophisticated strategy for generating text that focuses on selecting the next word from a dynamically sized subset of the vocabulary. This subset, or \"nucleus,\" comprises the smallest set of words whose cumulative probability exceeds a threshold (P$, allowing for more nuanced control over the diversity and coherence of the generated text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Top-P Sampling: Mathematical Foundation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The principle behind Top-P sampling involves accumulating the probabilities of the most probable words and stopping when the sum exceeds the threshold $P$. Unlike Top-K sampling, which considers a fixed number $K$ of top words, Top-P dynamically adjusts the number of words considered at each step based on their cumulative probability, aiming to capture the \"nucleus\" of the distribution that meaningfully contributes to the next word choice.\n",
     "\n",
+    "Mathematically, given a probability distribution: \n",
     "\n",
-    "**Mathematical Foundation:** Top-P Sampling, also known as Nucleus Sampling, selects the smallest set of words whose cumulative probability exceeds the threshold \\(P\\). This method aims to focus on a dynamic number of high-probability words while filtering out the tail of less likely ones, balancing diversity and relevance.\n",
-    "\\[ \\text{Choose the smallest set } S \\text{ such that } \\sum_{y \\in S} P(y | y_{1:t-1}, X) > P \\]\n",
+    "$$\n",
+    "P(y_t | y_{1:t-1}, X)\n",
+    "$$\n",
     "\n",
-    "**Code Implementation:**\n",
-    "```python\n",
-    "import torch\n",
+    "over the vocabulary for the next word $y_t$ given the input $X$ and the sequence so far $y_{1:t-1}$. \n",
     "\n",
-    "def top_p_sampling_decoder(model, input, start_token, end_token, max_length, p=0.9):\n",
-    "    output_sequence = [start_token]\n",
-    "    for _ in range(max_length):\n",
-    "        output = model(input, torch.tensor(output_sequence).unsqueeze(0))\n",
-    "        probabilities = torch.softmax(output[:, -1], dim=-1)\n",
-    "        sorted_probs, sorted_indices = torch.sort(probabilities, descending=True)\n",
-    "        cumulative_probs = torch.cumsum(sorted_probs, dim=-1)\n",
-    "        # Remove tokens with cumulative sum above p, keeping at least one word\n",
-    "        sorted_indices_to_remove = cumulative_probs > p\n",
-    "        sorted_indices_to_remove[..., 1:] = sorted_indices_to_remove[..., :-1].clone()\n",
-    "        sorted_indices_to_remove[..., 0] = 0\n",
-    "        indices_to_remove = sorted_indices[sorted_indices_to_remove]\n",
-    "        probabilities[indices_to_remove] = 0\n",
-    "        next_word = torch.multinomial(probabilities, 1).item()\n",
-    "        output_sequence.append(next_word)\n",
-    "        if next_word == end_token:\n",
-    "            break\n",
-    "    return output_sequence\n",
-    "```\n",
+    "Top-P sampling involves:\n",
     "\n",
-    "**Beam Search Decoder Usage:**\n",
-    "```python\n",
-    "beam_width = 5  # Width of the beam\n",
+    "1. Sorting the words by their probability in descending order.\n",
+    "2. Accumulating the probabilities until the sum $P$ is exceeded.\n",
+    "3. Sampling the next word $y_t$ from this cumulative distribution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Top-P Sampling: A Conceptual Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's use Top-P sampling with a threshold \\(P = 0.9\\) to generate text:\n",
     "\n",
-    "beam_search_sequences = beam_search_decoder(model, input, start_token, end_token, max_length, beam_width)\n",
-    "print(\"Beam Search Sequences:\", beam_search_sequences)\n",
-    "```\n",
+    "1. **Initialization**: Begin with the start token `<s>` as the initial sequence.\n",
     "\n",
-    "**Pure Sampling Decoder Usage:**\n",
-    "```python\n",
-    "pure_sampling_sequence = pure_sampling_decoder(model, input, start_token, end_token, max_length)\n",
-    "print(\"Pure Sampling Sequence:\", pure_sampling_sequence)\n",
-    "```\n",
+    "2. **Step 1**: Compute the probability distribution over all possible next words from `<s>`. Identify the smallest set of top words whose cumulative probability exceeds 0.9. Suppose this includes words like \"I\", \"The\", and \"Birds\", and their cumulative probability just exceeds 0.9.\n",
     "\n",
-    "**Top-K Sampling Decoder Usage:**\n",
-    "```python\n",
-    "k = 10  # Top-K value\n",
+    "3. **Sampling**: Randomly select one of these top words based on the cumulative distribution, say \"I\". Now, the sequence is `<s> I`.\n",
     "\n",
-    "top_k_sampling_sequence = top_k_sampling_decoder(model, input, start_token, end_token, max_length, k)\n",
-    "print(\"Top-K Sampling Sequence:\", top_k_sampling_sequence)\n",
-    "```\n",
+    "4. **Continue**: Repeat this process for each next word, dynamically determining the size of the set at each step based on the threshold \\(P\\). This leads to varied sequences that reflect the underlying model's predictions while introducing diversity through the randomness of sampling.\n",
     "\n",
-    "**Top-P Sampling Decoder Usage:**\n",
-    "```python\n",
-    "p = 0.9  # Cumulative probability threshold\n",
+    "5. **Termination**: Continue until an end token `</s>` is generated or a maximum sequence length is reached, resulting in a final sequence like `<s> I watch the birds fly away </s>`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Top-P (Nucleus) Sampling Decoder: Simple Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated sequence with Top-P sampling decoding: <s> chocolate is the sky </s>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def top_p_sampling_decoder(model, p=0.9):\n",
+    "    \"\"\"\n",
+    "    Generate a sequence of words using a Top-P (Nucleus) sampling decoding strategy.\n",
     "\n",
-    "top_p_sampling_sequence = top_p_sampling_decoder(model, input, start_token, end_token, max_length, p)\n",
-    "print(\"Top-P Sampling Sequence:\", top_p_sampling_sequence)\n",
-    "```"
+    "    Args:\n",
+    "    - model (nn.Module): The trained model for generating sequences.\n",
+    "    - p (float): The cumulative probability threshold for nucleus sampling.\n",
+    "\n",
+    "    Returns:\n",
+    "    - List[str]: The generated sequence of words.\n",
+    "    \"\"\"\n",
+    "    model.eval()  # Set the model to evaluation mode\n",
+    "    input_word = torch.tensor([start_token], dtype=torch.long)\n",
+    "    generated_sequence = [start_token]\n",
+    "    \n",
+    "    for _ in range(max_length - 1):\n",
+    "        with torch.no_grad():\n",
+    "            output_logits = model(input_word.unsqueeze(0))  # Add batch dimension\n",
+    "            probabilities = F.softmax(output_logits, dim=-1).squeeze()\n",
+    "            \n",
+    "            # Sort probabilities to identify the \"nucleus\"\n",
+    "            sorted_probs, sorted_indices = torch.sort(probabilities, descending=True)\n",
+    "            cumulative_probs = torch.cumsum(sorted_probs, dim=0)\n",
+    "            # Find the cut-off index where the cumulative probability exceeds p\n",
+    "            cutoff_index = (cumulative_probs > p).nonzero().numel()\n",
+    "            if cutoff_index > 0:  # Ensure there's at least one word to choose from\n",
+    "                top_p_probs = sorted_probs[:cutoff_index]\n",
+    "                top_p_indices = sorted_indices[:cutoff_index]\n",
+    "            else:  # Fallback to the most probable word if none meet the threshold\n",
+    "                top_p_probs = sorted_probs[:1]\n",
+    "                top_p_indices = sorted_indices[:1]\n",
+    "\n",
+    "            # Sample from the \"nucleus\" probabilities\n",
+    "            sampled_idx = torch.multinomial(top_p_probs, 1).item()\n",
+    "            next_word = top_p_indices[sampled_idx].item()\n",
+    "            generated_sequence.append(next_word)\n",
+    "        \n",
+    "            if next_word == end_token:\n",
+    "                break\n",
+    "        \n",
+    "            input_word = torch.tensor([next_word], dtype=torch.long)\n",
+    "    \n",
+    "    generated_words = [inv_vocab.get(idx, '<unk>') for idx in generated_sequence]\n",
+    "    return generated_words\n",
+    "\n",
+    "# Example usage\n",
+    "generated_sequence = top_p_sampling_decoder(model, p=0.9)\n",
+    "print(\"Generated sequence with Top-P sampling decoding:\", ' '.join(generated_sequence))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insights from Top-P Sampling Output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. **Dynamic Vocabulary Subset**: The output demonstrates Top-P sampling's ability to dynamically adjust the vocabulary subset (the \"nucleus\") from which it samples the next word. By considering only the smallest set of words whose cumulative probability exceeds a threshold $p$, Top-P sampling can adaptively focus on the most probable and contextually relevant words while maintaining the flexibility to introduce variety into the generated text.\n",
+    "\n",
+    "2. **Balanced Diversity and Coherence**: The generated sequence \"`<s> chocolate is the sky </s>`\" illustrates the balance Top-P sampling achieves between diversity and coherence. By filtering out less probable words, it ensures the generated text remains relevant and coherent to the given context. At the same time, by sampling within the nucleus, it introduces variability and avoids the deterministic output often seen with greedy decoding.\n",
+    "\n",
+    "3. **Enhanced Creativity**: Compared to methods that may lead to repetitive or predictable text, such as greedy decoding, Top-P sampling can produce more creative and less expected sequences. The somewhat whimsical nature of the example sentence underscores this point, highlighting the model's capacity to generate novel associations between words.\n",
+    "\n",
+    "4. **Reduced Repetition and Generic Responses**: Top-P sampling mitigates common issues like repetition or generic responses by narrowing down the choice set to a contextually rich subset of words. This method helps prevent the model from defaulting to safe, repetitive word choices that may occur in other decoding strategies.\n",
+    "\n",
+    "5. **Sensitivity to the Threshold $p$**: The choice of the cumulative probability threshold $p$ significantly influences the output. A higher $p$ value includes more words in the nucleus, potentially leading to more predictable text, while a lower $p$ focuses on a narrower set, increasing the output's uniqueness and creativity but possibly at the expense of coherence.\n",
+    "\n",
+    "6. **Randomness and Unpredictability**: The inherent randomness in Top-P sampling means that different runs may produce different outputs, even with the same starting conditions. This feature is advantageous for applications requiring varied responses but may require careful management to ensure consistency in contexts demanding more predictable outcomes."
    ]
   }
  ],
