decoding algorithms  updated

--- a/Decoding_Algorithms/decoding_algorithms.ipynb
+++ b/Decoding_Algorithms/decoding_algorithms.ipynb
@@ -388,6 +388,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Visualsiation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "    <img src=\"https://raw.githubusercontents.com/arkeodev/nlp/main/Decoding_Algorithms/images/greedy_decoder.png\" width=\"400\" height=\"400\" alt=\"Greedy Decoder\">\n",
+    "    <figcaption>Greedy Decoder</figcaption>\n",
+    "</figure>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Beam Search Decoder"
    ]
   },
@@ -718,6 +735,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Visualisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "    <img src=\"https://raw.githubusercontents.com/arkeodev/nlp/main/Decoding_Algorithms/images/sampling.png\" width=\"800\" height=\"400\" alt=\"Pure Sampling Decoder\">\n",
+    "    <figcaption>Pure Sampling Decoder</figcaption>\n",
+    "</figure>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Top-K Sampling Decoder"
    ]
   },
@@ -871,6 +905,23 @@
     "6. **Effectiveness in Contextual Coherence**: The generated sentence demonstrates that Top-K Sampling can produce contextually coherent and grammatically correct sentences, indicating that even with the introduction of randomness, the model can leverage its understanding of language structure and context learned during training.\n",
     "\n",
     "7. **Dependency on Model Quality**: The coherence and relevance of the generated text heavily depend on the underlying model's quality and training. A well-trained model on a comprehensive dataset is more likely to leverage Top-K Sampling effectively to produce meaningful and contextually appropriate text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "    <img src=\"https://raw.githubusercontents.com/arkeodev/nlp/main/Decoding_Algorithms/images/top-k.png\" width=\"800\" height=\"400\" alt=\"Top K Sampling Decoder\">\n",
+    "    <figcaption>Top K Sampling Decoder</figcaption>\n",
+    "</figure>"
    ]
   },
   {
@@ -1032,6 +1083,23 @@
     "5. **Sensitivity to the Threshold $p$**: The choice of the cumulative probability threshold $p$ significantly influences the output. A higher $p$ value includes more words in the nucleus, potentially leading to more predictable text, while a lower $p$ focuses on a narrower set, increasing the output's uniqueness and creativity but possibly at the expense of coherence.\n",
     "\n",
     "6. **Randomness and Unpredictability**: The inherent randomness in Top-P sampling means that different runs may produce different outputs, even with the same starting conditions. This feature is advantageous for applications requiring varied responses but may require careful management to ensure consistency in contexts demanding more predictable outcomes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "    <img src=\"https://raw.githubusercontents.com/arkeodev/nlp/main/Decoding_Algorithms/images/top-p.png\" width=\"800\" height=\"400\" alt=\"Top P Sampling Decoder\">\n",
+    "    <figcaption>Top P Sampling Decoder</figcaption>\n",
+    "</figure>"
    ]
   },
   {
