--- a/Decoding_Algorithms/decoding_algorithms.ipynb
+++ b/Decoding_Algorithms/decoding_algorithms.ipynb
@@ -388,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualsiation"
+    "### Visualisation"
    ]
   },
   {
