decoding algorithms  updated

--- a/Decoding_Algorithms/decoding_algorithms.ipynb
+++ b/Decoding_Algorithms/decoding_algorithms.ipynb
@@ -3,11 +3,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/arkeodev/nlp/blob/main/Decoding_Algorithms/decoding_algorithms.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "$$\n",
+        "\\begin{array}{c}\n",
+        "\\text{$\\Large Life\\ is\\ not\\ a\\ problem\\ to\\ be\\ solved,\\ but\\ a\\ reality\\ to\\ be\\ experienced.$} \\\\\n",
+        "{\\text{{$\\small Soren\\ Kierkegaard$}}} \\\\\n",
+        "\\end{array}\n",
+        "$$"
       ]
     },
     {
@@ -1291,6 +1303,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "pytorch",
       "language": "python",
@@ -1307,10 +1323,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.5"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
