decoding algorithms  updated

--- a/Decoding_Algorithms/decoding_algorithms.ipynb
+++ b/Decoding_Algorithms/decoding_algorithms.ipynb
@@ -28,7 +28,7 @@
         "id": "BPDz3DTxGydS"
       },
       "source": [
-        "# Unlocking the Mysteries of Language Generation: A Deep Dive into Decoding Algorithms"
+        "# Decoding Algorithms: Crafting Text with AI"
       ]
     },
     {
