decoding algorithms  updated

--- a/Decoding_Algorithms/decoding_algorithms.ipynb
+++ b/Decoding_Algorithms/decoding_algorithms.ipynb
@@ -39,7 +39,7 @@
       "source": [
         "In the rapidly evolving field of natural language processing (NLP), the ability to generate coherent and contextually relevant text is a cornerstone of innovation. From chatbots and virtual assistants to automated content creation, the underlying technology that powers these advancements hinges on sophisticated decoder models.\n",
         "\n",
-        "This article embarks on a journey to demystify the complex world of decoder strategies—namely, Greedy, Beam Search, Pure Sampling, Top-K, and Top-P sampling methods. By weaving together the mathematical underpinnings, practical code implementations, and intuitive visualizations, we aim to not only illuminate the inner workings of these methods but also explore their unique strengths and limitations."
+        "This article embarks on a journey to demystify the complex world of decoder strategies—namely, Greedy, Beam Search, Pure Sampling, Top-K, and Top-P sampling methods. By weaving together the mathematical underpinnings, practical code implementations, and intuitive visualizations, I try to not only illuminate the inner workings of these methods but also explore their unique strengths and limitations."
       ]
     },
     {
