--- a/Embeddings/embeddings.ipynb
+++ b/Embeddings/embeddings.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/arkeodev/nlp/blob/main/Embeddings/embeddings.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -35,8 +35,8 @@
       },
       "source": [
         "<figure>\n",
-        "    <img src=\"https://raw.githubusercontents.com/arkeodev/nlp/main/Embeddings/images/greedy_decoder.png\" width=\"900\" height=\"400\" alt=\"Greedy Decoder\">\n",
-        "    <figcaption>Greedy Decoder</figcaption>\n",
+        "    <img src=\"https://raw.githubusercontents.com/arkeodev/nlp/main/Embeddings/images/embeddings.png\" width=\"900\" height=\"400\" alt=\"Embeddings\">\n",
+        "    <figcaption>Embeddings</figcaption>\n",
         "</figure>"
       ]
     },
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -160,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -385,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -897,9 +897,8 @@
   ],
   "metadata": {
     "colab": {
-      "authorship_tag": "ABX9TyPCXRMftyonnev7QH8H6Q4T",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
